add metrics to pinger

--- a/examples/stacks/pinger/pinger.yml
+++ b/examples/stacks/pinger/pinger.yml
@@ -8,7 +8,7 @@ networks:
 services:
 
   pinger:
-    image: subfuzion/pinger:${TAG:-latest}
+    image: appcelerator/pinger:${TAG:-latest}
     networks:
       default:
         aliases:
