--- a/cluster/plugin/local/Dockerfile
+++ b/cluster/plugin/local/Dockerfile
@@ -2,7 +2,8 @@
 FROM golang:1.9-alpine as build
 # =============================
 # system deps
-RUN apk --no-cache add git binutils
+RUN echo "@edgecommunity http://nl.alpinelinux.org/alpine/edge/community" >> /etc/apk/repositories
+RUN apk --no-cache add git upx@edgecommunity
 
 ENV PKG github.com/appcelerator/amp/cluster/plugin/local
 ENV DIR /go/src/${PKG}
@@ -15,7 +16,7 @@ ARG LDFLAGS="-s"
 RUN go build -ldflags "${LDFLAGS}" -o ${TARGET} cmd/main.go
 
 # shrink the binary
-RUN strip ${TARGET}
+RUN upx ${TARGET}
 
 # =============================
 FROM alpine
