--- a/cluster/agent/stacks/03-proxy.ampcore.yml
+++ b/cluster/agent/stacks/03-proxy.ampcore.yml
@@ -17,6 +17,9 @@ services:
       - default
     deploy:
       mode: global
+      update_config:
+        parallelism: 1
+        delay: 5s
       labels:
         io.amp.role: "infrastructure"
       placement:
