--- a/cluster/agent/stacks/07-grafana.ampmon.yml
+++ b/cluster/agent/stacks/07-grafana.ampmon.yml
@@ -16,9 +16,6 @@ services:
       - default
     volumes:
       - grafana-data:/var/lib/grafana
-    environment:
-      SERVICE_PORTS: 3000
-      VIRTUAL_HOST: "http://dashboard.*,https://dashboard.*"
     ports:
       - "3000:3000"
     labels:
@@ -26,6 +23,13 @@ services:
       amp.service.stabilize.delay: "8s"
       amp.service.stabilize.timeout: "60s"
       amp.service.pull.timeout: "120s"
+      interlock.port: 3000
+      interlock.hostname: "dashboard"
+      interlock.domain: "*"
+      interlock.ssl: "true"
+      interlock.ssl_cert: "cert0.pem"
+      interlock.ssl_cert_key: "cert0.pem"
+      interlock.network: "ampnet"
     deploy:
       mode: replicated
       replicas: 1
