--- a/cluster/agent/stacks/07-grafana.ampmon.yml
+++ b/cluster/agent/stacks/07-grafana.ampmon.yml
@@ -17,8 +17,11 @@ services:
     volumes:
       - grafana-data:/var/lib/grafana
     environment:
-      SERVICE_PORTS: 3000
-      VIRTUAL_HOST: "http://dashboard.*,https://dashboard.*"
+      VIRTUAL_PORT: 3000
+      VIRTUAL_HOST: "dashboard.*"
+      VIRTUAL_PROTO: "https"
+      VIRTUAL_PORT: 443
+      CERT_NAME: "cert0"
     ports:
       - "3000:3000"
     labels:
