--- a/cluster/agent/stacks/10-gateway.ampcore.yml
+++ b/cluster/agent/stacks/10-gateway.ampcore.yml
@@ -16,8 +16,11 @@ services:
       amp.service.stabilize.delay: "5s"
       amp.service.stabilize.timeout: "20s"
     environment:
-      SERVICE_PORTS: 80
-      VIRTUAL_HOST: "https://gw.*,http://gw.*"
+      VIRTUAL_PORT: 80
+      VIRTUAL_HOST: "gw.*"
+      VIRTUAL_PROTO: "https"
+      VIRTUAL_PORT: 443
+      CERT_NAME: "cert0"
     deploy:
       mode: global
       labels:
