--- a/examples/stacks/pinger/pinger.yml
+++ b/examples/stacks/pinger/pinger.yml
@@ -10,12 +10,13 @@ services:
   pinger:
     image: appcelerator/pinger:${TAG:-latest}
     networks:
-      default:
-        aliases:
-          - pinger
+      - default
     environment:
-      SERVICE_PORTS: "3000"
-      VIRTUAL_HOST: "pinger.examples.*,https://pinger.examples.*"
+      VIRTUAL_PORT: 3000
+      VIRTUAL_HOST: "pinger.examples.*"
+      VIRTUAL_PROTO: "https"
+      VIRTUAL_PORT: 443
+      CERT_NAME: "cert0"
     deploy:
       replicas: 3
       update_config:
