load test with SSL_CERT modification on backend service

--- a/examples/stacks/counter/counter.yml
+++ b/examples/stacks/counter/counter.yml
@@ -13,6 +13,7 @@ services:
     environment:
       SERVICE_PORTS: "80"
       VIRTUAL_HOST: "http://go.counter.examples*,https://go.counter.examples.*"
+      SSL_CERT: "$COUNTER_CERT"
     deploy:
       replicas: 3
       placement:
